# cp-mega88-pico

./: .gitignore  CMakeLists.flash  CMakeLists.sdcard  CMakeLists.txt  DesignNote.md  Experimental.md  LICENSE  M5M4256L.md  README.md  avr.md  cmake_install.cmake  porting_avr.md  prep_cmakelists.sh  sdcard.md
nbproject/: configurations.xml  project.xml
src/: avrdude.bat  con.h  con_avr_uart.c  con_avr_uart_asm.S  con_base.c  con_pic18f.c  con_pico.c  config.h  conx.h  cpu_8080.c  crc16.c  crc16.h  debug.c  debug.h  delete_files.sh  eeprom.h  eeprom_base.c  eeprom_pic18f.c  eeprom_pico.c  fat.c  fat.h  flash.h  hardware_config.h  led_avr.c  led_pico.c  machine.c  machine.h  platform_nacl.h  platform_pic18f.c  platform_pico.c  sdcard.h  sdcard_avr.c  sdcard_base.c  sdcard_pic18f.c  sdcard_pico.c  sdcard_picoflash.c  sdcard_softpico.c  spi.h  spi_pico.c  sram.h  (+6 more)
